--- a/music_folder/table2.css
+++ b/music_folder/table2.css
@@ -1,6 +1,6 @@
 table, th, td {
  border: 1px solid black;
-    border-collapse; collapse;
+    border-collapse: collapse;
     /* center the table */
     /* margin: auto; */
     margin: 0 auto;
@@ -8,8 +8,12 @@ table, th, td {
 table {
     background-color: rgba(255, 255, 255, 0.452);
     /* move to center of page*/
-        margin-top: 2%;
+        margin-top: 1%;
 }
+
 body{
-  background-image: url("artist.webp"); margin-inline: /* The image used */
+  background-image: url("artist.webp");
+   margin-inline:23;
+  background-repeat: no-repeat;
+  background-size: cover;
 }
