added more content

--- a/music_folder/table2.css
+++ b/music_folder/table2.css
@@ -8,7 +8,7 @@ table, th, td {
 table {
     background-color: rgba(255, 255, 255, 0.452);
     /* move to center of page*/
-        margin-top: 1%;
+        margin-top: center;
 }
 
 body{
@@ -16,4 +16,12 @@ body{
    margin-inline:23;
   background-repeat: no-repeat;
   background-size: cover;
+}
+form {
+    margin: 0 auto; /* Center the form horizontally */
+    width: 400px;
+    padding: 1em;
+    border: 10px solid #000000;
+    border-radius: 1em;
+    background-color: #f9f9f9;
 }
